# bareopt

./: .travis.yml  LICENSE  README.md  optional.h
tests/: CMakeLists.txt  assignment.cpp  conanfile.txt  constructors.cpp  create_destroy.cpp  exception.cpp  issues.cpp  observers.cpp  overhead.cpp  values.cpp
